[package]
name = "ethereum-ext"
version = "0.1.0"
edition = "2021"

[dependencies]
ethereum = { version = "0.16.0" }
ethereum-types = { version = "0.15", default-features = false, features = [
    "rlp",
    "codec",
] }
k256 = { version = "0.13", default-features = false, features = [
    "ecdsa",
    "sha256",
] }
rlp = { version = "0.6", default-features = false, features = ["derive"] }
sha3 = { version = "0.10", default-features = false }

[features]
default = ["std"]
std = [
	"ethereum-types/std",
	"k256/std",
	"rlp/std",
	"sha3/std",
]
