[package]
name = "ethereum-ext"
version = "0.1.0"
edition = "2021"
authors = ["Manuel Mauro"]
license = "MIT"
description = "EIP-7702 authorization functionality for Ethereum"
readme = "README.md"
keywords = ["ethereum", "eip-7702", "authorization", "blockchain", "crypto"]
categories = ["cryptography", "no-std", "authentication"]

[dependencies]
ethereum = { version = "0.16.0", default-features = false }
ethereum-types = { version = "0.15", default-features = false, features = [
    "rlp",
    "codec",
] }
getrandom = { version = "0.2", features = ["js"] }
k256 = { version = "0.13", default-features = false, features = [
    "ecdsa",
    "sha256",
] }
rlp = { version = "0.6", default-features = false, features = ["derive"] }
sha3 = { version = "0.10", default-features = false }

[features]
default = ["std"]
std = ["ethereum/std", "ethereum-types/std", "k256/std", "rlp/std", "sha3/std"]
with-scale = ["ethereum/with-scale"]
with-serde = ["ethereum/with-serde"]
